@@ -1,7 +1,12 @@
 2007-07-08	Jannis Pohlmann <jannis@xfce.org>
 
-	* panel-plugin/*.{c,h}: Fix license headers. The source
-	  is under GPL, not LGPL. Fixes bug #3366.
+	* panel-plugin/time-out-countdown.c: Properly display remaining
+	  minutes when seconds are not displayed. Fixes bug #3221.
+
+2007-07-08	Jannis Pohlmann <jannis@xfce.org>
+
+	* panel-plugin/*.{c,h}: Fix license headers. The source is 
+	  under GPL, not LGPL. Fixes bug #3366.
 
 2007-07-06	Nick Schermer <nick@xfce.org>
 
